--- a/Ressources/CSS/style.css
+++ b/Ressources/CSS/style.css
@@ -4,6 +4,7 @@
   /* font-size: 22px; */
   color: seashell;
   opacity: 0.9;
+  text-align: center;
 }
 
 header {
@@ -14,6 +15,7 @@ header {
   border-bottom: 1px solid seashell;
   width: 100%;
   z-index: 10;
+  top: 0;
 }
 
 .header_logo {
@@ -42,9 +44,6 @@ header {
 .title {
   position: relative;
   top: 69px;
-}
-
-.title_imagecontainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -54,24 +53,34 @@ header {
   margin: 0 auto;
 }
 
-.title_imagecontainer_headline {
+/* .title_imagecontainer {
   text-align: center;
-}
-
-.title_imagecontainer_headline h2{
-  
-}
-
-.title_imagecontainer_headline h4{
-
-}
+} */
 
 .content {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   position: relative;
   top: 69px;
+  width: 1000px;
+  margin: 0 auto;
 }
 
-.content_container_item img {
+.content_headline {
+  width: 100%;
+  /* text-align: center; */
+}
+
+.content_item {
+  margin: 0 12.5px;
+}
+
+.content_item img {
   width: 300px;
   height: 200px;
+}
+
+.content_item h4 {
+  margin-top: 10px;
 }
