--- a/Ressources/CSS/style.css
+++ b/Ressources/CSS/style.css
@@ -59,7 +59,7 @@ header {
   text-align: center;
 } */
 
-.content {
+main {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -67,21 +67,21 @@ header {
   margin: 0 auto;
 }
 
-.content_headline {
+.main_headline {
   width: 100%;
   /* text-align: center; */
 }
 
-.content_item {
+.main_item {
   margin: 0 12.5px;
 }
 
-.content_item img {
+.main_item img {
   width: 300px;
   height: 200px;
 }
 
-.content_item h4 {
+.main_item h4 {
   margin-top: 10px;
 }
 
@@ -131,4 +131,15 @@ footer {
 }
 .locations_container_item h4 {
   padding: 10px 0;
+}
+
+.contact {
+  height: 200px;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.copyright h5 {
+  text-align: left;
+  padding-left: 20px;
 }
